<resources>
    <string name="app_name">class4</string>
    <string name="avatar">头像</string>
    <string name="usrname">用户名</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="phonenum">手机号</string>
    <string name="tag">标签</string>
    <string name="selfintro">个人介绍</string>
    <string name="commit">确定</string>
    <string name="cancel">取消</string>
</resources>
