<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--头像-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="265dp"
            android:layout_height="match_parent"
            android:text="@string/avatar"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center_vertical"
            android:background="@drawable/chathead"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/back">
    </View>

    <!--用户名-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/usrname"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />
        <TextView
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:id="@+id/usr_input"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrow"
            android:id="@+id/usr_inbtn"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/back">
    </View>

    <!--性别-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />
        <TextView
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:id="@+id/gender_input" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrow"
            android:id="@+id/gender_inbtn"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/back">
    </View>

    <!--生日-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/birthday"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />
        <TextView
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:id="@+id/bday_input"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrow"
            android:id="@+id/bday_inbtn"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/back">
    </View>

    <!--手机号-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/phonenum"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />
        <TextView
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:id="@+id/phonenum_input"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrow"
            android:id="@+id/pnum_inbtn"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/back">
    </View>

    <!--标签-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/tag"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />
        <TextView
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrow"
            android:id="@+id/tag_inbtn"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/back">
    </View>

    <!--个人介绍-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/selfintro"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical" />
        <TextView
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrow"
            android:id="@+id/sintro_inbtn"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/back">
    </View>

</androidx.appcompat.widget.LinearLayoutCompat>